véritable premier examen version finale

--- a/Ctrl1PW/exo6.html
+++ b/Ctrl1PW/exo6.html
@@ -32,9 +32,13 @@ footer {
         background-color:  blanchedalmond ;
     }
 
+    @media screen and (max-width: 600px) {
+}
+
+
 </style>
     <meta charset="UTF-8">
-<title>Ex5html</title>
+<title>Ex6html</title>
 </head>
 
 <body>
